fixed load sec alignment

--- a/styles/net.css
+++ b/styles/net.css
@@ -74,10 +74,12 @@ p label{
 .toggle{
     height: 20px;
     width: 20px;
-    margin: auto 10px;     
+    margin: auto 10px;
+    
+
 }
 
-.bs_input, .loan{
+.bs_input, .loan, .in_data{
     height: 2.5rem;
     padding: 5px;
     margin-bottom: 1.5rem;
@@ -92,11 +94,19 @@ p label{
     text-align: center;
 }
 
+h3{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px;
+}
+
 .loan_sec{
     justify-content: center;
     text-align: center;
-    border: 1px solid red;
     margin-top: 1rem;
+    font-weight: bolder;
+    font-size: larger;
 }
 
 .loan_select{
@@ -107,7 +117,7 @@ p label{
 
 .loan_select label{
     font-size: 20px;
-    font-weight: bold;
+    font-weight:100px;
     margin: 10px;
 }
 
@@ -120,7 +130,8 @@ p label{
     font-weight: bold;
 }
 
-.in_date{
+.loan_data p{
+    margin: auto;
     
 }
 /*
